# audio_into_text

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
app/: manage.py
app/base_app/: asgi.py  settings.py  urls.py  wsgi.py
app/media_to_text/: __init__.py  admin.py  apps.py  models.py  models_downloader.py  signals.py  tasks.py
app/media_to_text/css/: custom_admin.css
app/media_to_text/migrations/: 0001_initial.py  0002_translator_set_name_alter_translator_day.py  0003_remove_translator_audio_url_and_more.py
audio_into_text/: manage.py
audio_into_text/audio_into_text/: admin.py  asgi.py  models.py  settings.py  tasks.py  urls.py  wsgi.py
